# pokemon-memory

./: Cargo.toml  Makefile.toml  README.md  bsconfig.json  index.html  package-lock.json  package.json
__tests__/: Cards_test.bs.js  Cards_test.re  Game_test.bs.js  Game_test.re
src/: Cards.bs.js  Cards.re  Game.bs.js  Game.re  Index.bs.js  Index.re  card.rs  cards.rs  lib.rs
static/: index.html
