[package]
name = "pokemon_memory"
version = "0.1.0"
authors = ["Greg Cline <gregrcline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sauron = "0.31.0"
console_log = "0.2.0"
log = "0.4.11"
rand = {version = "0.7.3", features = ["wasm-bindgen"]}
web-sys = {version = "0.3.45", features = ["Window"]}
